feat: update storefront payments and catalog
